--- a/config/locales/doorkeeper.ru.yml
+++ b/config/locales/doorkeeper.ru.yml
@@ -11,6 +11,7 @@ ru:
         doorkeeper/application:
           attributes:
             redirect_uri:
+              blank: не может быть пустым.
               fragment_present: не может содержать фрагмент.
               invalid_uri: должен быть правильным URI.
               relative_uri: должен быть абсолютным URI.
@@ -82,7 +83,8 @@ ru:
         invalid_client: Клиентская аутентификация завершилась неудачей (неизвестный клиент, не включена клиентская аутентификация, или метод аутентификации не поддерживается.
         invalid_grant: Предоставленный доступ некорректен, истек, отозван, не совпадает с URI перенаправления, использованным в запросе авторизации, или был выпущен для другого клиента.
         invalid_redirect_uri: Включенный URI перенаправления некорректен.
-        invalid_request: В запросе не хватает обязательного параметра, присутствует неподдерживаемое значение параметра, либо он был сформирован неверно.
+        invalid_request:
+          missing_param: В запросе не хватает обязательного параметра, присутствует неподдерживаемое значение параметра, либо он был сформирован неверно.
         invalid_resource_owner: Предоставленные данные владельца ресурса некорректны, или владелец ресурса не может быть найден
         invalid_scope: Запрошенное разрешение некорректно, неизвестно или неверно сформировано.
         invalid_token:
